--- a/MyVagon/UI/Settings.storyboard
+++ b/MyVagon/UI/Settings.storyboard
@@ -230,7 +230,7 @@
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
-                                                    <stackView opaque="NO" tag="10" contentMode="scaleToFill" ambiguous="YES" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="g5l-4b-w4Q">
+                                                    <stackView opaque="NO" tag="10" contentMode="scaleToFill" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="g5l-4b-w4Q">
                                                         <rect key="frame" x="53" y="122.5" width="149" height="20"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3/5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sCn-Q6-kwc" customClass="ShipperDetailsLabel" customModule="MyVagon" customModuleProvider="target">
@@ -242,10 +242,10 @@
                                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="lblRate" value="YES"/>
                                                                 </userDefinedRuntimeAttributes>
                                                             </label>
-                                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R9w-E6-Y8G">
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R9w-E6-Y8G">
                                                                 <rect key="frame" x="32.5" y="0.0" width="116.5" height="20"/>
                                                                 <subviews>
-                                                                    <view userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1lo-De-Wiv" customClass="CosmosView" customModule="Cosmos">
+                                                                    <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1lo-De-Wiv" customClass="CosmosView" customModule="Cosmos">
                                                                         <rect key="frame" x="0.0" y="4.5" width="116.5" height="11"/>
                                                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                         <userDefinedRuntimeAttributes>
@@ -477,17 +477,17 @@
                                                         </constraints>
                                                         <prototypes>
                                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ShipperDetailsCell" id="GKf-Zh-pcs" customClass="ShipperDetailsCell" customModule="MyVagon" customModuleProvider="target">
-                                                                <rect key="frame" x="0.0" y="24.5" width="374" height="77"/>
+                                                                <rect key="frame" x="0.0" y="24.5" width="374" height="82.5"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GKf-Zh-pcs" id="DHp-Mt-fRc">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="77"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="82.5"/>
                                                                     <autoresizingMask key="autoresizingMask"/>
                                                                     <subviews>
                                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ACh-hU-Ebv">
-                                                                            <rect key="frame" x="0.0" y="10" width="374" height="67"/>
+                                                                            <rect key="frame" x="0.0" y="10" width="374" height="72.5"/>
                                                                             <subviews>
                                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a3g-FJ-zQk">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="45" height="67"/>
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="45" height="72.5"/>
                                                                                     <subviews>
                                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_ChatProfile" translatesAutoresizingMaskIntoConstraints="NO" id="fS6-UF-nRa">
                                                                                             <rect key="frame" x="1" y="0.0" width="43" height="43"/>
@@ -505,7 +505,7 @@
                                                                                     </constraints>
                                                                                 </view>
                                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ogp-dv-gop">
-                                                                                    <rect key="frame" x="54" y="0.0" width="320" height="67"/>
+                                                                                    <rect key="frame" x="54" y="0.0" width="320" height="72.5"/>
                                                                                     <subviews>
                                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rachel Agency" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wKP-65-ftr" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
                                                                                             <rect key="frame" x="0.0" y="0.0" width="84" height="17.5"/>
@@ -522,7 +522,7 @@
                                                                                                 </userDefinedRuntimeAttribute>
                                                                                             </userDefinedRuntimeAttributes>
                                                                                         </label>
-                                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="March 17,2021 8:00am" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="am7-nz-NX0" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
+                                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="March 17,2021 8:00am" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="am7-nz-NX0" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
                                                                                             <rect key="frame" x="0.0" y="19.5" width="127.5" height="20"/>
                                                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                                             <nil key="textColor"/>
@@ -536,7 +536,7 @@
                                                                                                 </userDefinedRuntimeAttribute>
                                                                                             </userDefinedRuntimeAttributes>
                                                                                         </label>
-                                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Lorem ipsum dolor sit amet, consectetur" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8X1-9h-nZy" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
+                                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit amet, consectetur" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8X1-9h-nZy" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
                                                                                             <rect key="frame" x="0.0" y="41.5" width="320" height="21"/>
                                                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                             <nil key="textColor"/>
@@ -550,7 +550,7 @@
                                                                                                 </userDefinedRuntimeAttribute>
                                                                                             </userDefinedRuntimeAttributes>
                                                                                         </label>
-                                                                                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SL7-cp-LZP" customClass="CosmosView" customModule="Cosmos">
+                                                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SL7-cp-LZP" customClass="CosmosView" customModule="Cosmos">
                                                                                             <rect key="frame" x="132.5" y="19.5" width="120" height="20"/>
                                                                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                                             <userDefinedRuntimeAttributes>
@@ -671,6 +671,14 @@
             <point key="canvasLocation" x="4734.7826086956529" y="86.383928571428569"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="1lo-De-Wiv">
+            <size key="intrinsicContentSize" width="76.5" height="11.300000000000001"/>
+        </designable>
+        <designable name="SL7-cp-LZP">
+            <size key="intrinsicContentSize" width="120" height="20"/>
+        </designable>
+    </designables>
     <resources>
         <image name="ic_ChatProfile" width="44" height="46"/>
         <image name="ic_GreaterThenSign" width="21" height="48"/>
